inference_server_resnet50.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: inference-server-resnet50
 namespace: mlplatform
spec:
 selector:
   matchLabels:
     run: inference-server-resnet50
 replicas: 1
 template:
   metadata:
     labels:
       run: inference-server-resnet50
   spec:
     containers:
     - name: inference-server
       image: inference-server:latest
       imagePullPolicy: Never
       ports:
       - containerPort: 8080
       volumeMounts:
         - name: registry-volume
           mountPath: /usr/src/app/model-files
         - name: log-volume
           mountPath: /usr/src/app/logs           
     volumes:
      - name: registry-volume
        hostPath:
          path: /data/model-files
          type: DirectoryOrCreate
      - name: log-volume
        hostPath:
          path: /data/logs
          type: DirectoryOrCreate
