model_registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: model-registry
 namespace: mlplatform
spec:
 selector:
   matchLabels:
     run: model-registry
 replicas: 1
 template:
   metadata:
     labels:
       run: model-registry
   spec:
     containers:
     - name: model-registry
       image: model-registry:latest
       imagePullPolicy: Never
       ports:
       - containerPort: 8080
       volumeMounts:
         - name: registry-volume
           mountPath: /usr/src/app/model-files
         - name: log-volume
           mountPath: /usr/src/app/logs     
     volumes:
      - name: registry-volume
        hostPath:
          path: /data/model-files
          type: DirectoryOrCreate
      - name: log-volume
        hostPath:
          path: /data/logs
          type: DirectoryOrCreate
